[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -20,3 +20,12 @@ body {
     height: 200px;
 }
 
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+    color: #2b6d64;
+    font-family: Courier New;
+    padding-top: 50;
+    padding-left: 20;
+    padding-right: 20;
+}
